--- a/package.json
+++ b/package.json
@@ -9,12 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "firebase": "^10.12.1",
+    "firebase": "^10.11.1",
     "next": "14.2.3",
     "next-auth": "^4.24.7",
     "react": "^18",
     "react-dom": "^18",
-    "react-icons": "^5.2.1",
+    "react-icons": "^5.1.0",
+    "react-modal": "^3.16.1",
     "recoil": "^0.7.7"
   },
   "devDependencies": {
